Commit de prueba

--- a/index.html
+++ b/index.html
@@ -56,12 +56,7 @@
         <div class="main">
             <div class="containerHome">
                 <div class="containerHome___seccionSatelite">
-                    <picture>
-                        <source media="(min-width:992px)" srcset="media/home/home-satelite-lg.jpeg">
-                        <source media="(min-width:768px)" srcset="media/home/home-satelite-md.jpeg">
-                        <source media="(min-width:10px)" srcset="media/home/home-satelite-sm.jpeg">
-                        <img src="media/home/home-satelite-lg.jpeg" alt="Imagen de la superficie de la Luna">
-                    </picture>
+                    <div class="containerHome___seccionSatelite__imagen"></div>
                     <div class="containerHome___seccion___texto">
                         <h1 class="containerHome___seccionSatelite__titulo"><a href="satelite.html">LA LUNA</a></h1>
                         <h2 class="containerHome___seccionSatelite__subtitulo"><a href="satelite.html">Todo lo que sabemos sobre nuestro satélite</a></h2>
