Implementación background-image en el Home

--- a/contacto.html
+++ b/contacto.html
@@ -125,9 +125,9 @@
                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                         <div class="card-body">
                             <ul>
-                                <li><a href="#">FAQ</a></li>
-                                <li><a href="#">Términos y condiciones</a></li>
-                                <li><a href="#">Contacto</a></li>
+                                <li>FAQ</li>
+                                <li>Términos y condiciones</li>
+                                <li>Contacto</li>
                             </ul>
                         </div>
                     </div>
