--- a/index.html
+++ b/index.html
@@ -56,32 +56,22 @@
         <div class="main">
             <div class="containerHome">
                 <div class="containerHome___seccionSatelite">
-                    <div class="containerHome___seccionSatelite__imagen"></div>
+                    <div class="containerHome__seccionImagen containerHome__imagenSatelite"></div>
                     <div class="containerHome___seccion___texto">
                         <h1 class="containerHome___seccionSatelite__titulo"><a href="satelite.html">LA LUNA</a></h1>
                         <h2 class="containerHome___seccionSatelite__subtitulo"><a href="satelite.html">Todo lo que sabemos sobre nuestro satélite</a></h2>
                     </div>
                 </div>
                 <div class="containerHome___seccionEvolucion">
-                    <picture>
-                        <source media="(min-width:992px)" srcset="media/home/home-evolucion-lg.jpeg">
-                        <source media="(min-width:768px)" srcset="media/home/home-evolucion-md.jpeg">
-                        <source media="(min-width:10px)" srcset="media/home/home-evolucion-sm.jpeg">
-                        <img src="media/home/home-evolucion-lg.jpeg" alt="Recreación del nacimiento de la Luna">
-                    </picture>
+                    <div class="containerHome__seccionImagen containerHome__imagenEvolucion"></div>
                     <h2 class="containerHome___seccion___boton"><a href="evolucion.html">Evolución</a></h2>
                 </div>
                 <div class="containerHome___seccionExploracion">
-                    <picture>
-                        <source media="(min-width:992px)" srcset="media/home/home-exploracion-lg.jpeg">
-                        <source media="(min-width:768px)" srcset="media/home/home-exploracion-md.jpeg">
-                        <source media="(min-width:10px)" srcset="media/home/home-exploracion-sm.jpeg">
-                        <img src="media/home/home-exploracion-lg.jpeg" alt="Imagen de Buzz Aldrin en la superficie de la Luna">
-                    </picture>
+                    <div class="containerHome__seccionImagen containerHome__imagenExploracion"></div>
                     <h2 class="containerHome___seccion___boton"><a href="exploracion.html">Exploración</a></h2>
                 </div>
                 <div class="containerHome___seccionTienda">
-                    <img src="media/home/home-tienda.jpeg">
+                    <div class="containerHome__seccionImagen containerHome__imagenTienda"></div>
                     <h2 class="containerHome___seccion___boton"><a href="tienda">Tienda</a></h2>
                 </div>
             </div>
@@ -139,9 +129,9 @@
                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                         <div class="card-body">
                             <ul>
-                                <li><a href="#">FAQ</a></li>
-                                <li><a href="#">Términos y condiciones</a></li>
-                                <li><a href="#">Contacto</a></li>
+                                <li>FAQ</li>
+                                <li>Términos y condiciones</li>
+                                <li>Contacto</li>
                             </ul>
                         </div>
                     </div>
