--- a/contacto.html
+++ b/contacto.html
@@ -1,102 +1,127 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
+    <!-- META TAGS -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <meta name="description" content="Ejemplo de Palabras Clave y Programación">
-    <link rel="stylesheet" type=text/css href="css/estilos.css">
     <meta name="description" content="Si tienes alguna consulta, reclamo o sugerencia, no dudes en escribirnos por chat o WhatsApp. ¡Queremos oírte!">
     <meta name="keywords" content="contacto, whatsapp, atencion al cliente">
+    <!-- CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" type=text/css href="css/estilos.css">
+    <!-- TITLE -->
     <title>La Luna | Contáctanos</title>
 </head>
 
 <body>
     <div class="wraper">
         <!--HEADER-->
-        <div id="header">
+        <header class="navContainer">
             <nav class="navbar navbar-expand-lg ">
                 <button id="navbar__boton" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="bi bi-list"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="index.html">INICIO</span></a>
-                        </li>
+                        <li class="nav-item"><a class="nav-link" href="index.html">INICIO</a></li>
                         <li class="separadorNav">|</li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="satelite.html">SATÉLITE</a>
-                        </li>
+                        <li class="nav-item"><a class="nav-link" href="satelite.html">SATÉLITE</a></li>
                         <li class="separadorNav">|</li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="evolucion.html">EVOLUCIÓN</a>
-                        </li>
+                        <li class="nav-item"><a class="nav-link" href="evolucion.html">EVOLUCIÓN</a></li>
                         <li class="separadorNav">|</li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="exploracion.html">EXPLORACIÓN</a>
-                        </li>
+                        <li class="nav-item"><a class="nav-link" href="exploracion.html">EXPLORACIÓN</a></li>
                         <li class="separadorNav">|</li>
-                        <li class="nav-item active">
-                            <a class="nav-link" href="contacto.html">CONTACTO</a>
-                        </li>
+                        <li class="nav-item active"><a class="nav-link" href="contacto.html">CONTACTO</a></li>
                         <li class="separadorNav">|</li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="tienda.html">TIENDA</a>
-                        </li>
+                        <li class="nav-item"><a class="nav-link" href="tienda.html">TIENDA</a></li>
                     </ul>
                 </div>
-                <div class="seccionActiva active nav-item">
-                    <a class="nav-link" href="#">CONTACTO</a>
-                </div>
+                <div class="seccionActiva active nav-item"><a class="nav-link" href="#">CONTACTO</a></div>
             </nav>
-        </div>
+        </header>
         <!--MAIN-->
-        <div class="main mainContacto">
+        <main class="mainContacto">
             <div class="contenedorContacto">
                 <div class="contenedorContacto__contenedorTitulo">
-                    <p>Contacto</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, odit autem aliquam doloribus labore atque.</p>
+                    <h1>Contacto</h1>
+                    <p>¿Tienes alguna duda, sugerencia o reclamo? Escríbenos :)</p>
                 </div>
                 <div class="contenedorContacto__contenedorFormulario">
-                    <form class="formularioContacto" action="contacto.html" method="get">
+                    <form class="formularioContacto" id="formularioDeContacto" action="contacto.html" method="get">
                         <input type="text" id="nombreApellido" name="nombre-apellido" placeholder="Tu nombre completo" value="">
                         <input type="email" id="email" name="email" placeholder="Tu correo electrónico" value="">
                         <input type="text" id="mensaje" name="mensaje" placeholder="Tu mensaje">
-                        <label for="">¿Deseas recibir nuestro newsletter?</label>
-                        <input type="checkbox" name="newsletter-optin" checked value="yes">
-                        <input type="submit" name="" value="Enviar ">
+                        <label for="newsletter">¿Deseas recibir nuestro newsletter?</label>
+                        <input type="checkbox" id="newsletter" name="newsletter-optin" checked value="yes">
+                        <button type="button" data-toggle="modal" data-target="#modalContacto">Enviar</button>
                     </form>
                 </div>
             </div>
-        </div>
+            <!--MODAL CONTACTO-->
+            <div class="contenedorContacto__modal modal fade" id="modalContacto" tabindex="-1" role="dialog" aria-labelledby="modalNewsletterTitle" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLongTitle">¡Mensaje enviado!</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            Gracias por escribirnos. Te responderemos a la brevedad.
+                        </div>
+                        <div class="modal-footer"><button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button></div>
+                    </div>
+                </div>
+            </div>
+        </main>
         <!--FOOTER-->
-        <footer>
+        <footer class="footer">
+            <!--HEADER-->
             <div class="footer__header">
                 <p>La Luna</p>
             </div>
+            <!--NEWSLETTER-->
             <div class="footer__formularioNewsletter">
                 <p>Suscríbete a nuestro newsletter</p>
-               <form class="formularioNewsletter" action="contacto.html" method="get">
+                <form action="exploracion.html" method="get">
                     <input type="email" placeholder="Mi correo electrónico">
-                    <button class="footer__formularioNewsletter__boton"><i class="bi bi-arrow-right"></i></button>
-                </form>
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalNewsletter"><i class="bi bi-arrow-right"></i></button>
+</form>
             </div>
+            <!-- MODAL -->
+            <div class="footer__modal modal fade" id="modalNewsletter" tabindex="-1" role="dialog" aria-labelledby="modalNewsletterTitle" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLongTitle">¡Gracias por suscribirte!</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            Te hemos enviado un correo electrónico para que confirmes tu suscripción.
+                        </div>
+                        <div class="modal-footer"><button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button></div>
+                    </div>
+                </div>
+            </div>
+            <!--REDES SOCIALES-->
             <div class="footer__redesSociales">
                 <ul>
-                    <li><i class="bi bi-facebook"></i></li>
-                    <li><i class="bi bi-instagram"></i></li>
-                    <li><i class="bi bi-twitter"></i></li>
-                    <li><i class="bi bi-youtube"></i></li>
+                            <li><a href="demasiado-lejos.html"><i class="bi bi-facebook"></i></a></li>
+                    <li><a href="demasiado-lejos.html"><i class="bi bi-instagram"></i></a></li>
+                    <li><a href="demasiado-lejos.html"><i class="bi bi-twitter"></i></a></li>
+                    <li><a href="demasiado-lejos.html"><i class="bi bi-youtube"></i></a></li>
                 </ul>
             </div>
+            <!--ACORDEON-->
             <div class="footer__acordeon accordion" id="accordionExample">
                 <div class="card">
                     <div class="card-header" id="headingOne">
                         <h2 class="mb-0">
-                            <button class="footer__acordeon__boton btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            <button class="footer__acordeon btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                                 Secciones<i class="bi bi-chevron-down"></i>
                             </button>
                         </h2>
@@ -117,7 +142,7 @@
                 <div class="card">
                     <div class="card-header" id="headingTwo">
                         <h2 class="mb-0">
-                            <button class="footer__acordeon__boton btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            <button class="footer__acordeon btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                                 Atención al cliente<i class="bi bi-chevron-down"></i>
                             </button>
                         </h2>
@@ -125,9 +150,9 @@
                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                         <div class="card-body">
                             <ul>
-                                <li>FAQ</li>
-                                <li>Términos y condiciones</li>
-                                <li>Contacto</li>
+                                <li><a href="demasiado-lejos.html">FAQ</a></li>
+                                <li><a href="demasiado-lejos.html">Términos y condiciones</a></li>
+                                <li><a href="demasiado-lejos.html">Contacto</a></li>
                             </ul>
                         </div>
                     </div>
@@ -135,7 +160,7 @@
                 <div class="card">
                     <div class="card-header" id="headingThree">
                         <h2 class="mb-0">
-                            <button class="footer__acordeon__boton btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            <button class="footer__acordeon btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                                 Contáctanos<i class="bi bi-chevron-down"></i>
                             </button>
                         </h2>
@@ -143,8 +168,8 @@
                     <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                         <div class="card-body">
                             <ul>
-                                <li><a href="#">WhatsApp: +54 9 11 XXXX XXXX</a></li>
-                                <li><a href=":mailto">contacto@laluna.com.ar</a></li>
+                                <li><a href="https://wa.me/5491131050323?text=Hola,%20tengo%20una%20consulta:%20" target="_blank">WhatsApp: +54 9 11 3105 0323</a></li>
+                                <li><a href="mailto:contacto@laluna.com.ar">contacto@laluna.com.ar</a></li>
                             </ul>
                         </div>
                     </div>
