--- a/demasiado-lejos.html
+++ b/demasiado-lejos.html
@@ -5,20 +5,20 @@
     <!-- META TAGS -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Una tienda online para fanáticos la Luna y el espacio: pijamas, libros, decoración, telescopios y más. Hacemos envíos a toda la Argentina.">
-    <meta name="keywords" content="luna, espacio, nasa, tienda, pijamas, telescopios, libros, decoracion, argentina">
+    <meta name="description" content="Un sitio con toda la información que debes conocer sobre la Luna, el único satélite natural de la Tierra: evolución, exploración y mucho más.">
+    <meta name="keywords" content="luna, satelite, tierra, sistema solar, informacion">
     <!-- CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" type=text/css href="css/estilos.css">
     <!-- TITLE -->
-    <title>La Luna | Tienda</title>
+    <title>La Luna | Todo lo que debes saber sobre nuestro satélite</title>
 </head>
 
 <body>
     <div class="wraper">
         <!--HEADER-->
         <header class="navContainer">
-            <nav class="navbar navbar-expand-lg ">
+            <nav class="navbar navbar-expand-lg">
                 <button id="navbar__boton" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"><i class="bi bi-list"></i></button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
@@ -32,107 +32,18 @@
                         <li class="separadorNav">|</li>
                         <li class="nav-item"><a class="nav-link" href="contacto.html">CONTACTO</a></li>
                         <li class="separadorNav">|</li>
-                        <li class="nav-item active"><a class="nav-link" href="tienda.html">TIENDA</a></li>
+                        <li class="nav-item"><a class="nav-link" href="tienda.html">TIENDA</a></li>
                     </ul>
                 </div>
-                <h1 class="seccionActiva active nav-item"><a class="nav-link" href="#">TIENDA</a></h1>
+                <div class="seccionActiva active nav-item"><a class="nav-link" href="#">LUGAR DESCONOCIDO</a></div>
             </nav>
         </header>
         <!--MAIN-->
-        <main>
-            <!--CONTENEDOR TIENDA-->
-            <div class="contenedorTienda">
-                <!--BARRA NAV TIENDA-->
-                <div class="barraNavTienda">
-                    <div class="barraNavTienda__contenedor">
-                        <ul>
-                            <li>Iniciar sesión</li>
-                            <li><i class="bi bi-cart3"></i></li>
-                            <li><span class="badge badge-dark">4</span></li>
-                        </ul>
-                    </div>
-                </div>
-                <!--SHOWROOM PRODUCTOS-->
-                <div class="showroomProductos">
-                    <!--CAROUSEL-->
-                    <div id="carouselExampleIndicators" class="carouselTienda carousel slide" data-ride="carousel">
-                        <ol class="carousel-indicators">
-                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                        </ol>
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img src="media/tienda/tienda-carousel-1.jpeg" class="d-block w-100" alt="...">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="media/tienda/tienda-carousel-2.jpeg" class="d-block w-100" alt="...">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="media/tienda/tienda-carousel-3.jpeg" class="d-block w-100" alt="...">
-                            </div>
-                        </div>
-                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Next</span>
-                        </a>
-                    </div>
-                    <!--POR CATEGORÍAS-->
-                    <div class="contenedorCategorias">
-                        <div class="categoria">
-                            <img class="categoria__imagen-1" src="media/tienda/tienda-categoria-1.jpeg" alt="">
-                            <div class="categoria__texto">
-                                <div class="nombreCategoria">INDUMENTARIA</div>
-                                <div class="botonCategoria"><a href="demasiado-lejos.html">COMPRAR</a></div>
-                            </div>
-                        </div>
-                        <div class="categoria">
-                            <img class="categoria__imagen-2" src="media/tienda/tienda-categoria-2.jpeg" alt="">
-                            <div class="categoria__texto">
-                                <div class="nombreCategoria">TELESCOPIOS</div>
-                                <div class="botonCategoria"><a href="demasiado-lejos.html">COMPRAR</a></div>
-                            </div>
-                        </div>
-                        <div class="categoria">
-                            <img class="categoria__imagen-3" src="media/tienda/tienda-categoria-3.jpeg" alt="">
-                            <div class="categoria__texto">
-                                <div class="nombreCategoria">HOGAR</div>
-                                <div class="botonCategoria"><a href="demasiado-lejos.html">COMPRAR</a></div>
-                            </div>
-                        </div>
-                        <div class="categoria">
-                            <img class="categoria__imagen-4" src="media/tienda/tienda-categoria-4.jpeg" alt="">
-                            <div class="categoria__texto">
-                                <div class="nombreCategoria">OFERTAS</div>
-                                <div class="botonCategoria"><a href="demasiado-lejos.html">COMPRAR</a></div>
-                            </div>
-                        </div>
-                        <div class="categoria">
-                            <img class="categoria__imagen-5" src="media/tienda/tienda-categoria-5.jpeg" alt="">
-                            <div class="categoria__texto">
-                                <div class="nombreCategoria">VARIOS</div>
-                                <div class="botonCategoria"><a href="demasiado-lejos.html">COMPRAR</a></div>
-                            </div>
-                        </div>
-                        <div class="categoria">
-                            <img class="categoria__imagen-6" src="media/tienda/tienda-categoria-6.jpeg" alt="">
-                            <div class="categoria__texto">
-                                <div class="nombreCategoria">LANZAMIENTOS</div>
-                                <div class="botonCategoria"><a href="demasiado-lejos.html">COMPRAR</a></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!--CARTEL NECESITAS AYUDA-->
-            <a class="contenedorNecesitasAyuda" href="https://wa.me/5491131050323?text=Hola,%20tengo%20una%20consulta:%20" target="_blank">
-                <i class="bi bi-whatsapp"></i>
-                <div>¿Necesitas ayuda con tu compra?</div>
-            </a>
+        <main class="containerDemasiadoLejos">
+            <h3>Te has aventurado demasiado lejos</h3>
+            <img src="media/demasiado-lejos/demasiado-lejos-astronauta.png" alt="">
+            <h3>El espacio es un lugar peligroso, vuelve antes de que sea demasiado tarde</h3>
+            <div class="containerDemasiadoLejos__seccionBoton"><a href="index.html">Volver al Inicio</a></div>
         </main>
         <!--FOOTER-->
         <footer class="footer">
