--- a/index.html
+++ b/index.html
@@ -1,106 +1,113 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
+    <!-- META TAGS -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Un sitio con toda la información que debes conocer sobre la Luna, el único satélite natural de la Tierra: evolución, exploración y mucho más.">
+    <meta name="keywords" content="luna, satelite, tierra, sistema solar, informacion">
     <!-- CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" type=text/css href="css/estilos.css">
-    <meta name="description" content="Un sitio con toda la información que debes conocer sobre la Luna, el único satélite natural de la Tierra: evolución, exploración y mucho más.">
-    <meta name="keywords" content="luna, satelite, tierra, sistema solar, informacion">
+    <!-- TITLE -->
     <title>La Luna | Todo lo que debes saber sobre nuestro satélite</title>
 </head>
 
 <body>
     <div class="wraper">
         <!--HEADER-->
-        <div id="header">
-            <nav class="navbar navbar-expand-lg ">
-                <button id="navbar__boton" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="bi bi-list"></i>
-                </button>
+        <header class="navContainer">
+            <nav class="navbar navbar-expand-lg">
+                <button id="navbar__boton" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"><i class="bi bi-list"></i></button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="index.html">INICIO</span></a>
-                        </li>
+                        <li class="nav-item active"><a class="nav-link" href="index.html">INICIO</a></li>
                         <li class="separadorNav">|</li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="satelite.html">SATÉLITE</a>
-                        </li>
+                        <li class="nav-item"><a class="nav-link" href="satelite.html">SATÉLITE</a></li>
                         <li class="separadorNav">|</li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="evolucion.html">EVOLUCIÓN</a>
-                        </li>
+                        <li class="nav-item"><a class="nav-link" href="evolucion.html">EVOLUCIÓN</a></li>
                         <li class="separadorNav">|</li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="exploracion.html">EXPLORACIÓN</a>
-                        </li>
+                        <li class="nav-item"><a class="nav-link" href="exploracion.html">EXPLORACIÓN</a></li>
                         <li class="separadorNav">|</li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contacto.html">CONTACTO</a>
-                        </li>
+                        <li class="nav-item"><a class="nav-link" href="contacto.html">CONTACTO</a></li>
                         <li class="separadorNav">|</li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="tienda.html">TIENDA</a>
-                        </li>
+                        <li class="nav-item"><a class="nav-link" href="tienda.html">TIENDA</a></li>
                     </ul>
                 </div>
-                <div class="seccionActiva active nav-item">
-                    <a class="nav-link" href="#">INICIO</a>
-                </div>
+                <div class="seccionActiva active nav-item"><a class="nav-link" href="#">INICIO</a></div>
             </nav>
-        </div>
+        </header>
         <!--MAIN-->
-        <div class="main">
+        <main>
             <div class="containerHome">
-                <div class="containerHome___seccionSatelite">
+                <div class="HomeSeccionSatelite">
                     <div class="containerHome__seccionImagen containerHome__imagenSatelite"></div>
-                    <div class="containerHome___seccion___texto">
-                        <h1 class="containerHome___seccionSatelite__titulo"><a href="satelite.html">LA LUNA</a></h1>
-                        <h2 class="containerHome___seccionSatelite__subtitulo"><a href="satelite.html">Todo lo que sabemos sobre nuestro satélite</a></h2>
+                    <div class="containerHome__seccionTexto">
+                        <h1 class="HomeSeccionSatelite__titulo"><a href="satelite.html">LA LUNA</a></h1>
+                        <h2 class="HomeSeccionSatelite__subtitulo"><a href="satelite.html">Todo lo que sabemos sobre nuestro satélite</a></h2>
                     </div>
                 </div>
-                <div class="containerHome___seccionEvolucion">
+                <div class="HomeSeccionEvolucion">
                     <div class="containerHome__seccionImagen containerHome__imagenEvolucion"></div>
-                    <h2 class="containerHome___seccion___boton"><a href="evolucion.html">Evolución</a></h2>
+                    <h2 class="containerHome__seccionBoton"><a href="evolucion.html">Evolución</a></h2>
                 </div>
-                <div class="containerHome___seccionExploracion">
+                <div class="HomeSeccionExploracion">
                     <div class="containerHome__seccionImagen containerHome__imagenExploracion"></div>
-                    <h2 class="containerHome___seccion___boton"><a href="exploracion.html">Exploración</a></h2>
+                    <h2 class="containerHome__seccionBoton"><a href="exploracion.html">Exploración</a></h2>
                 </div>
-                <div class="containerHome___seccionTienda">
+                <div class="HomeSeccionTienda">
                     <div class="containerHome__seccionImagen containerHome__imagenTienda"></div>
-                    <h2 class="containerHome___seccion___boton"><a href="tienda">Tienda</a></h2>
+                    <h2 class="containerHome__seccionBoton"><a href="tienda.html">Tienda</a></h2>
                 </div>
             </div>
-        </div>
+        </main>
         <!--FOOTER-->
-        <footer>
+        <footer class="footer">
+            <!--HEADER-->
             <div class="footer__header">
                 <p>La Luna</p>
             </div>
+            <!--NEWSLETTER-->
             <div class="footer__formularioNewsletter">
                 <p>Suscríbete a nuestro newsletter</p>
-                <form class="formularioNewsletter" action="index.html" method="get">
+                <form action="exploracion.html" method="get">
                     <input type="email" placeholder="Mi correo electrónico">
-                    <button class="footer__formularioNewsletter__boton"><i class="bi bi-arrow-right"></i></button>
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalNewsletter"><i class="bi bi-arrow-right"></i></button>
                 </form>
             </div>
+            <!-- MODAL -->
+            <div class="footer__modal modal fade" id="modalNewsletter" tabindex="-1" role="dialog" aria-labelledby="modalNewsletterTitle" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLongTitle">¡Gracias por suscribirte!</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            Te hemos enviado un correo electrónico para que confirmes tu suscripción.
+                        </div>
+                        <div class="modal-footer"><button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button></div>
+                    </div>
+                </div>
+            </div>
+            <!--REDES SOCIALES-->
             <div class="footer__redesSociales">
                 <ul>
-                    <li><i class="bi bi-facebook"></i></li>
-                    <li><i class="bi bi-instagram"></i></li>
-                    <li><i class="bi bi-twitter"></i></li>
-                    <li><i class="bi bi-youtube"></i></li>
+                    <li><a href="demasiado-lejos.html"><i class="bi bi-facebook"></i></a></li>
+                    <li><a href="demasiado-lejos.html"><i class="bi bi-instagram"></i></a></li>
+                    <li><a href="demasiado-lejos.html"><i class="bi bi-twitter"></i></a></li>
+                    <li><a href="demasiado-lejos.html"><i class="bi bi-youtube"></i></a></li>
                 </ul>
             </div>
+            <!--ACORDEON-->
             <div class="footer__acordeon accordion" id="accordionExample">
                 <div class="card">
                     <div class="card-header" id="headingOne">
                         <h2 class="mb-0">
-                            <button class="footer__acordeon__boton btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            <button class="footer__acordeon btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                                 Secciones<i class="bi bi-chevron-down"></i>
                             </button>
                         </h2>
@@ -121,7 +128,7 @@
                 <div class="card">
                     <div class="card-header" id="headingTwo">
                         <h2 class="mb-0">
-                            <button class="footer__acordeon__boton btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            <button class="footer__acordeon btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                                 Atención al cliente<i class="bi bi-chevron-down"></i>
                             </button>
                         </h2>
@@ -129,9 +136,9 @@
                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                         <div class="card-body">
                             <ul>
-                                <li>FAQ</li>
-                                <li>Términos y condiciones</li>
-                                <li>Contacto</li>
+                                <li><a href="demasiado-lejos.html">FAQ</a></li>
+                                <li><a href="demasiado-lejos.html">Términos y condiciones</a></li>
+                                <li><a href="demasiado-lejos.html">Contacto</a></li>
                             </ul>
                         </div>
                     </div>
@@ -139,7 +146,7 @@
                 <div class="card">
                     <div class="card-header" id="headingThree">
                         <h2 class="mb-0">
-                            <button class="footer__acordeon__boton btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            <button class="footer__acordeon btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                                 Contáctanos<i class="bi bi-chevron-down"></i>
                             </button>
                         </h2>
@@ -147,8 +154,8 @@
                     <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                         <div class="card-body">
                             <ul>
-                                <li><a href="#">WhatsApp: +54 9 11 XXXX XXXX</a></li>
-                                <li><a href=":mailto">contacto@laluna.com.ar</a></li>
+                                <li><a href="https://wa.me/5491131050323?text=Hola,%20tengo%20una%20consulta:%20" target="_blank">WhatsApp: +54 9 11 3105 0323</a></li>
+                                <li><a href="mailto:contacto@laluna.com.ar">contacto@laluna.com.ar</a></li>
                             </ul>
                         </div>
                     </div>
