--- a/contacto.html
+++ b/contacto.html
@@ -10,6 +10,8 @@
     <!-- CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" type=text/css href="css/estilos.css">
+    <!-- ÍCONO -->
+    <link rel="icon" type="image/png" href="media/icono/icono-luna.png">
     <!-- TITLE -->
     <title>La Luna | Contáctanos</title>
 </head>
@@ -79,16 +81,14 @@
         <!--FOOTER-->
         <footer class="footer">
             <!--HEADER-->
-            <div class="footer__header">
-                <p>La Luna</p>
-            </div>
+            <div class="footer__header">La Luna</div>
             <!--NEWSLETTER-->
             <div class="footer__formularioNewsletter">
                 <p>Suscríbete a nuestro newsletter</p>
                 <form action="exploracion.html" method="get">
                     <input type="email" placeholder="Mi correo electrónico">
                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalNewsletter"><i class="bi bi-arrow-right"></i></button>
-</form>
+                </form>
             </div>
             <!-- MODAL -->
             <div class="footer__modal modal fade" id="modalNewsletter" tabindex="-1" role="dialog" aria-labelledby="modalNewsletterTitle" aria-hidden="true">
@@ -110,7 +110,7 @@
             <!--REDES SOCIALES-->
             <div class="footer__redesSociales">
                 <ul>
-                            <li><a href="demasiado-lejos.html"><i class="bi bi-facebook"></i></a></li>
+                    <li><a href="demasiado-lejos.html"><i class="bi bi-facebook"></i></a></li>
                     <li><a href="demasiado-lejos.html"><i class="bi bi-instagram"></i></a></li>
                     <li><a href="demasiado-lejos.html"><i class="bi bi-twitter"></i></a></li>
                     <li><a href="demasiado-lejos.html"><i class="bi bi-youtube"></i></a></li>
