--- a/demasiado-lejos.html
+++ b/demasiado-lejos.html
@@ -10,6 +10,8 @@
     <!-- CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" type=text/css href="css/estilos.css">
+    <!-- ÍCONO -->
+    <link rel="icon" type="image/png" href="media/icono/icono-luna.png">
     <!-- TITLE -->
     <title>La Luna | Todo lo que debes saber sobre nuestro satélite</title>
 </head>
@@ -41,16 +43,14 @@
         <!--MAIN-->
         <main class="containerDemasiadoLejos">
             <h3>Te has aventurado demasiado lejos</h3>
-            <img src="media/demasiado-lejos/demasiado-lejos-astronauta.png" alt="">
+            <img src="media/demasiado-lejos/demasiado-lejos-astronauta.png" alt="Imagen de un astronauta">
             <h3>El espacio es un lugar peligroso, vuelve antes de que sea demasiado tarde</h3>
             <div class="containerDemasiadoLejos__seccionBoton"><a href="index.html">Volver al Inicio</a></div>
         </main>
         <!--FOOTER-->
         <footer class="footer">
             <!--HEADER-->
-            <div class="footer__header">
-                <p>La Luna</p>
-            </div>
+            <div class="footer__header">La Luna</div>
             <!--NEWSLETTER-->
             <div class="footer__formularioNewsletter">
                 <p>Suscríbete a nuestro newsletter</p>
