--- a/evolucion.html
+++ b/evolucion.html
@@ -10,6 +10,8 @@
     <!-- CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" type=text/css href="css/estilos.css">
+    <!-- ÍCONO -->
+    <link rel="icon" type="image/png" href="media/icono/icono-luna.png">
     <!-- TITLE -->
     <title>La Luna | Formación y evolución</title>
 </head>
@@ -45,7 +47,7 @@
             <div class="containerEvolucion__item1 containerSeccionTexto">
                 <h2 class="seccionTitulo">NACIDA POR ACCIDENTE</h2>
                 <div class="seccionTexto">
-                    <p>La hipótesis sobre la formación de la Luna que se ha impuesto sobre las demás es la del “impacto gigante”, según la cual nuestro satélite surgió de los restos que quedaron las la colisión del protoplaneta Tierra con un hipotético planeta bautizado Tea.</p>
+                    <p>La hipótesis sobre la formación de la Luna que se ha impuesto sobre las demás es la del “impacto gigante”, según la cual nuestro satélite surgió de los restos que quedaron tras la colisión del protoplaneta Tierra con un hipotético planeta bautizado Tea.</p>
                     <p>La actual Tierra sería el resultado de la mezcla de ambos cuerpos; y la Luna, el de los restos eyectados del choque. Las rocas lunares y terrestres muestran idénticas proporciones de isótopos químicos, lo que revela un origen común.</p>
                 </div>
             </div>
@@ -75,7 +77,7 @@
                 </div>
                 <div class="containerSeccionTexto containerEvolucion__item4__explicacion-2">
                     <h2 class="seccionSubtitulo">GRAN IMPACTO EN EL POLO SUR LUNAR</h2>
-                    <p class="seccionTexto">Un impacto de enormes proporciones junto al polo sur formó hace unos 4.300 millones de años la cuenca Aitken. La colisión fue de tal magnitud y violencia que envió esconbros al lado opuesto de la Luna.</p>
+                    <p class="seccionTexto">Un impacto de enormes proporciones junto al polo sur formó hace unos 4.300 millones de años la cuenca Aitken. La colisión fue de tal magnitud y violencia que envió escombros al lado opuesto de la Luna.</p>
                 </div>
                 <div class="containerEvolucion__item4__imagen-3">
                     <img src="media/evolucion/evolucion-galeria-3.jpg" alt="Bombardeo y primeros cráteres de la Luna">
@@ -89,7 +91,7 @@
                 </div>
                 <div class="containerSeccionTexto containerEvolucion__item4__explicacion-4">
                     <h2 class="seccionSubtitulo">VULCANISMO Y MARES LUNARES</h2>
-                    <p class="seccionTexto">Hace entre 3.800 y 1.000 millones de años, la actividad volcánica resultante creó amplias planicies de lava que, al enfriarse, generaron los mares lunares, de aspecto más oscuro que las zonas altas circundantes por el mayor contenido de hierro de basalto.</p>
+                    <p class="seccionTexto">Hace entre 3.800 y 1.000 millones de años, la actividad volcánica resultante creó amplias planicies de lava que, al enfriarse, generaron los mares lunares, de aspecto más oscuro que las zonas altas circundantes por el mayor contenido en hierro del basalto.</p>
                 </div>
                 <div class="containerEvolucion__item4__imagen-5">
                     <img src="media/evolucion/evolucion-galeria-5.jpg" alt="Formación de cráteres intermedios">
@@ -110,9 +112,7 @@
         <!--FOOTER-->
         <footer class="footer">
             <!--HEADER-->
-            <div class="footer__header">
-                <p>La Luna</p>
-            </div>
+            <div class="footer__header">La Luna</div>
             <!--NEWSLETTER-->
             <div class="footer__formularioNewsletter">
                 <p>Suscríbete a nuestro newsletter</p>
