--- a/tienda.html
+++ b/tienda.html
@@ -10,6 +10,10 @@
     <!-- CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" type=text/css href="css/estilos.css">
+    <!-- ÍCONO -->
+    <link rel="icon" type="image/png" href="media/icono/icono-luna.png">
+    <!-- ANIMACIONES -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- TITLE -->
     <title>La Luna | Tienda</title>
 </head>
@@ -63,13 +67,13 @@
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="media/tienda/tienda-carousel-1.jpeg" class="d-block w-100" alt="...">
+                                <img src="media/tienda/tienda-carousel-1.jpeg" class="d-block w-100" alt="Tienda de artículos inspirados en la Luna y el espacio">
                             </div>
                             <div class="carousel-item">
-                                <img src="media/tienda/tienda-carousel-2.jpeg" class="d-block w-100" alt="...">
+                                <img src="media/tienda/tienda-carousel-2.jpeg" class="d-block w-100" alt="Tienda de artículos inspirados en la Luna y el espacio">
                             </div>
                             <div class="carousel-item">
-                                <img src="media/tienda/tienda-carousel-3.jpeg" class="d-block w-100" alt="...">
+                                <img src="media/tienda/tienda-carousel-3.jpeg" class="d-block w-100" alt="Tienda de artículos inspirados en la Luna y el espacio">
                             </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -83,47 +87,29 @@
                     </div>
                     <!--POR CATEGORÍAS-->
                     <div class="contenedorCategorias">
-                        <div class="categoria">
-                            <img class="categoria__imagen-1" src="media/tienda/tienda-categoria-1.jpeg" alt="">
-                            <div class="categoria__texto">
-                                <div class="nombreCategoria">INDUMENTARIA</div>
-                                <div class="botonCategoria"><a href="demasiado-lejos.html">COMPRAR</a></div>
-                            </div>
+                        <div class="categoria imagen-categoria-indumentaria">
+                            <div class="nombreCategoria" data-aos="fade-down-right">INDUMENTARIA</div>
+                            <div class="botonCategoria" data-aos="fade-down-right"><a href="demasiado-lejos.html">COMPRAR</a></div>
                         </div>
-                        <div class="categoria">
-                            <img class="categoria__imagen-2" src="media/tienda/tienda-categoria-2.jpeg" alt="">
-                            <div class="categoria__texto">
-                                <div class="nombreCategoria">TELESCOPIOS</div>
-                                <div class="botonCategoria"><a href="demasiado-lejos.html">COMPRAR</a></div>
-                            </div>
+                        <div class="categoria imagen-categoria-telescopios">
+                            <div class="nombreCategoria" data-aos="fade-down">TELESCOPIOS</div>
+                            <div class="botonCategoria" data-aos="fade-down"><a href="demasiado-lejos.html">COMPRAR</a></div>
                         </div>
-                        <div class="categoria">
-                            <img class="categoria__imagen-3" src="media/tienda/tienda-categoria-3.jpeg" alt="">
-                            <div class="categoria__texto">
-                                <div class="nombreCategoria">HOGAR</div>
-                                <div class="botonCategoria"><a href="demasiado-lejos.html">COMPRAR</a></div>
-                            </div>
+                        <div class="categoria imagen-categoria-hogar">
+                            <div class="nombreCategoria" data-aos="fade-down-left">HOGAR</div>
+                            <div class="botonCategoria" data-aos="fade-down-left"><a href="demasiado-lejos.html">COMPRAR</a></div>
                         </div>
-                        <div class="categoria">
-                            <img class="categoria__imagen-4" src="media/tienda/tienda-categoria-4.jpeg" alt="">
-                            <div class="categoria__texto">
-                                <div class="nombreCategoria">OFERTAS</div>
-                                <div class="botonCategoria"><a href="demasiado-lejos.html">COMPRAR</a></div>
-                            </div>
+                        <div class="categoria imagen-categoria-jugueteria">
+                            <div class="nombreCategoria" data-aos="fade-up-right">JUGUETERÍA</div>
+                            <div class="botonCategoria" data-aos="fade-up-right"><a href="demasiado-lejos.html">COMPRAR</a></div>
                         </div>
-                        <div class="categoria">
-                            <img class="categoria__imagen-5" src="media/tienda/tienda-categoria-5.jpeg" alt="">
-                            <div class="categoria__texto">
-                                <div class="nombreCategoria">VARIOS</div>
-                                <div class="botonCategoria"><a href="demasiado-lejos.html">COMPRAR</a></div>
-                            </div>
+                        <div class="categoria imagen-categoria-varios">
+                            <div class="nombreCategoria" data-aos="fade-up">VARIOS</div>
+                            <div class="botonCategoria" data-aos="fade-up"><a href="demasiado-lejos.html">COMPRAR</a></div>
                         </div>
-                        <div class="categoria">
-                            <img class="categoria__imagen-6" src="media/tienda/tienda-categoria-6.jpeg" alt="">
-                            <div class="categoria__texto">
-                                <div class="nombreCategoria">LANZAMIENTOS</div>
-                                <div class="botonCategoria"><a href="demasiado-lejos.html">COMPRAR</a></div>
-                            </div>
+                        <div class="categoria imagen-categoria-ofertas">
+                            <div class="nombreCategoria" data-aos="fade-up-left">OFERTAS</div>
+                            <div class="botonCategoria" data-aos="fade-up-left"><a href="demasiado-lejos.html">COMPRAR</a></div>
                         </div>
                     </div>
                 </div>
@@ -137,9 +123,7 @@
         <!--FOOTER-->
         <footer class="footer">
             <!--HEADER-->
-            <div class="footer__header">
-                <p>La Luna</p>
-            </div>
+            <div class="footer__header">La Luna</div>
             <!--NEWSLETTER-->
             <div class="footer__formularioNewsletter">
                 <p>Suscríbete a nuestro newsletter</p>
@@ -239,6 +223,10 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <script src="js/myscript.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+    AOS.init();
+    </script>
 </body>
 
 </html>
